--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cheerio": "^1.1.0",
     "dotenv": "^17.2.1",
     "playwright": "^1.54.2",
+    "puppeteer": "^24.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
