--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.11.0",
     "cheerio": "^1.1.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^17.2.1",
+    "ml-kmeans": "^6.0.0",
     "playwright": "^1.54.2",
     "puppeteer": "^24.16.0",
     "reflect-metadata": "^0.2.0",
