--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/config": "^3.2.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.11.0",
@@ -31,11 +32,11 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^17.2.1",
     "ml-kmeans": "^6.0.0",
+    "pg": "^8.16.3",
     "playwright": "^1.54.2",
     "puppeteer": "^24.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.25"
   },
   "devDependencies": {
